@@ -3,6 +3,9 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
 #include "CParticleGravityAffector.h"
+
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "os.h"
 #include "IAttributes.h"
 
@@ -62,3 +65,4 @@ void CParticleGravityAffector::deserializeAttributes(io::IAttributes* in, io::SA
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
