@@ -2,8 +2,11 @@
 // This file is part of the "Irrlicht Engine".
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
-#include "IrrCompileConfig.h"
 #include "CParticleMeshEmitter.h"
+
+#include "IrrCompileConfig.h"
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "os.h"
 
 namespace irr
@@ -188,3 +191,4 @@ void CParticleMeshEmitter::setMesh(IMesh* mesh)
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
