@@ -3,6 +3,9 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
 #include "CParticleRingEmitter.h"
+
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "os.h"
 #include "IAttributes.h"
 
@@ -175,3 +178,4 @@ void CParticleRingEmitter::deserializeAttributes(io::IAttributes* in, io::SAttri
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
