@@ -3,6 +3,9 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
 #include "CParticleScaleAffector.h"
+
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "IAttributes.h"
 
 namespace irr
@@ -51,3 +54,4 @@ namespace irr
 	}
 }
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
