@@ -2,8 +2,10 @@
 // This file is part of the "Irrlicht Engine".
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
-#include "IrrCompileConfig.h"
 #include "CParticleSphereEmitter.h"
+
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "os.h"
 #include "IAttributes.h"
 
@@ -173,3 +175,4 @@ void CParticleSphereEmitter::deserializeAttributes(io::IAttributes* in, io::SAtt
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
